src/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <description>Was added during the MBA : SF integration project in hopes that we could get the client&apos;s payment status in SF but it would cause too many API calls.  Field can probably be deleted</description>
        <label>zPayment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Populated by workflow if contact or lead changes</description>
        <label>zPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plan_Change_Date__c</fullName>
        <description>Workflow updates this field any time the plan name changes</description>
        <label>REPORT Plan Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Change_Value__c</fullName>
        <description>Calculated if the plan Change Date is populated to give an upgrade value</description>
        <formula>IF ( MonthlyRecurringRevenue__c  &lt;&gt;  Original_Plan_Value__c ,

IF(((MONTH( Previous_Upgrade_Date__c ) = MONTH(TODAY())) &amp;&amp; (YEAR(   Previous_Upgrade_Date__c  ) = YEAR(TODAY()))) , Previous_Upgrade_Amount__c ,

IF(((MONTH(  X1st_Upgrade_Date__c  ) = MONTH(TODAY())) &amp;&amp; (YEAR(  X1st_Upgrade_Date__c  ) = YEAR(TODAY()))),  X1st_Upgrade_Amount__c ,

 MonthlyRecurringRevenue__c  -  Original_Plan_Value__c   )),NULL)</formula>
        <label>REPORT Plan Change Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_Month_s_Revenue__c</fullName>
        <formula>IF( MONTH(Today()) =1, December_Revenue__c, 
IF( MONTH(Today()) =2, Jan_Revenue__c, 
IF( MONTH(Today()) =3, Feb_Revenue__c, 
IF( MONTH(Today()) =4, March_Revenue__c, 
IF( MONTH(Today()) =5, April_Revenue__c, 
 IF( MONTH(Today()) =6, May_revenue__c, 
IF( MONTH(Today()) =7, June_revenue__c, 
IF( MONTH(Today()) =8, July_Revenue__c, 
IF( MONTH(Today()) =9, August_Revenue__c, 
IF( MONTH(Today()) =10, September_Revenue__c, 
IF( MONTH(Today()) =11, October_Revenue__c, 
IF( MONTH(Today()) =12, November_Revenue__c, 
null))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev Month&apos;s Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Product_Name__c</fullName>
        <description>Workflow updates when the product changes - used in upgrade calculations</description>
        <label>Previous Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Product_Value__c</fullName>
        <description>Workflow updates when the product changes - used in upgrade calculations</description>
        <label>Previous Product Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Upgrade_Amount__c</fullName>
        <description>Workflow updates when the product changes - used in upgrade calculations</description>
        <formula>IF( ISBLANK( Previous_Product_Name__c ) = FALSE,   MonthlyRecurringRevenue__c - Previous_Product_Value__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Upgrade Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Upgrade_Date__c</fullName>
        <description>Workflow updates when the product changes - used in upgrade calculations</description>
        <label>Previous Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PricingTestGroup__c</fullName>
        <description>Populated by MBA identifying which pricing page the client is cookied to based on when they started their trial / purchased their store</description>
        <inlineHelpText>Which pricing page the client is cookied to based on when they started their trial / purchased their store</inlineHelpText>
        <label>zMKT MBA Pricing Test Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <description>ID specific to the plan name since plans can have different ID iterations yet maintain the same name in MBA
Populated by MBA</description>
        <inlineHelpText>ID specific to the plan name since plans can have different ID iterations yet maintain the same name in MBA</inlineHelpText>
        <label>MBA Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <description>From MBA to distinguish stores from SSLs and Domains</description>
        <inlineHelpText>Type of product (store, SSL, domain, etc)</inlineHelpText>
        <label>MBA Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Store</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSL Certificate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>From MBA saying which plan/trial the store is on</description>
        <inlineHelpText>From MBA saying which plan/trial the store is on</inlineHelpText>
        <label>MBA Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Plan__c</fullName>
        <description>old acq field - can probably be deleted</description>
        <label>Projected Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Value__c</fullName>
        <description>old acq field - can probably be deleted</description>
        <label>zProjected Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT MBA Promotion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually updated by sales reps to help reporting</description>
        <inlineHelpText>Check this if the store did not provision properly and the URL returns an error</inlineHelpText>
        <label>zProvisioning Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PurchaseDate__c</fullName>
        <description>From MBA.  Date when the sub became a paid plan</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Date_Month__c</fullName>
        <formula>Month(PurchaseDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Date Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Rep_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>think this can be deleted</description>
        <label>Purchase Rep Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Rep__c</fullName>
        <description>Workflow captures owner name when when store upgrades</description>
        <inlineHelpText>Subscription owner at the time of purchase</inlineHelpText>
        <label>Purchase Rep</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Team__c</fullName>
        <description>Workflow captures owner&apos;s team/departmetn when when store upgrades</description>
        <label>Purchase Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <description>From MBA.  SBD partner ID associated to the store</description>
        <inlineHelpText>SBD partner unique ID populated from MBA</inlineHelpText>
        <label>SBD MBA Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Migration_At__c</fullName>
        <description>For Orion. Indicates the Date/Time for which the client indicated whether they would like a migration or not.</description>
        <inlineHelpText>For Orion. Indicates the Date/Time for which the client indicated whether they would like a migration or not.</inlineHelpText>
        <label>SBD Requested Migration At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_Migration__c</fullName>
        <description>Used for Orion. Indicates whether the client requested a migration.</description>
        <inlineHelpText>Used for Orion. Indicates whether the client requested a migration.</inlineHelpText>
        <label>SBD Requested Migration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Date__c</fullName>
        <description>Formula used in reporting to capture the date of the most recent revenue change</description>
        <formula>IF( 
(ISBLANK(Plan_Change_Date__c) = TRUE || PurchaseDate__c &gt; Plan_Change_Date__c), 
PurchaseDate__c, Plan_Change_Date__c)</formula>
        <label>Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Owner__c</fullName>
        <description>ask Miles</description>
        <formula>IF(  ISBLANK(Revenue_Rep__c)=False ,   Revenue_Rep__c  ,   Owner:User.Full_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Rep_All_in_Quota__c</fullName>
        <description>Used in Miles&apos; revenue dashboard for quota attainment</description>
        <formula>IF( Purchase_Team__c = &quot;Channel Partner Sales&quot;,  Owner:User.All_in_Quota__c  , 
IF ( (MONTH( PurchaseDate__c ) = MONTH(TODAY()) ) &amp;&amp; YEAR(PurchaseDate__c ) = YEAR(TODAY() ) || (MONTH( PurchaseDate__c ) = MONTH( Last_Month_s_Date__c ))&amp;&amp; YEAR(PurchaseDate__c ) = YEAR(Last_Month_s_Date__c ), Owner:User.All_in_Quota__c , 
IF ( ISBLANK( Upgrade_Rep__c ) = FALSE &amp;&amp; NOT(ISPICKVAL( Upgrade_Stage__c ,&quot;New&quot;) &amp;&amp; NOT(ISPICKVAL( Upgrade_Stage__c ,&quot; &quot;))),  Upgrade_Rep__r.All_in_Quota__c  , NULL) ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Rep All-in Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Rep_Quota__c</fullName>
        <description>Used in Miles&apos; revenue dashboard for quota attainment calculations</description>
        <formula>IF( Purchase_Team__c = &quot;Channel Partner Sales&quot;,  Owner:User.Quota__c  , 
IF ( (MONTH( PurchaseDate__c ) = MONTH(TODAY()) ) &amp;&amp; YEAR(PurchaseDate__c ) = YEAR(TODAY() ) || (MONTH( PurchaseDate__c ) = MONTH( Last_Month_s_Date__c ))&amp;&amp; YEAR(PurchaseDate__c ) = YEAR(Last_Month_s_Date__c ),  Owner:User.Quota__c  , 
IF ( ISBLANK( Upgrade_Rep__c ) = FALSE &amp;&amp; NOT(ISPICKVAL( Upgrade_Stage__c ,&quot;New&quot;) &amp;&amp; NOT(ISPICKVAL( Upgrade_Stage__c ,&quot; &quot;))),  Upgrade_Rep__r.Quota__c , NULL) ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Rep Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Rep__c</fullName>
        <description>Formula used in reporting to capture the rep to be paid for the upgrade based on ownership and upgrade fields</description>
        <formula>IF( OR(Purchase_Team__c = &quot;Partner Sales&quot;,Purchase_Team__c = &quot;Acquisition Sales&quot;, Purchase_Team__c = &quot;Partner Sales-AU/NZ&quot;), Owner:User.Full_Name__c ,
IF ( (MONTH( PurchaseDate__c ) = MONTH(TODAY()) ) &amp;&amp; YEAR(PurchaseDate__c ) = YEAR(TODAY() ) || (MONTH( PurchaseDate__c ) = MONTH( Last_Month_s_Date__c ))&amp;&amp; YEAR(PurchaseDate__c ) = YEAR(Last_Month_s_Date__c ), Owner:User.Full_Name__c ,
IF ( ISBLANK( Upgrade_Rep__c ) = FALSE &amp;&amp; NOT(ISPICKVAL( Upgrade_Stage__c ,&quot;New&quot;) &amp;&amp; NOT(ISPICKVAL( Upgrade_Stage__c ,&quot; &quot;))), Upgrade_Rep__r.Full_Name__c, NULL) )
)</formula>
        <label>Revenue Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Team__c</fullName>
        <description>Formula used in reporting to capture the team credited for the upgrade based on ownership and upgrade fields</description>
        <formula>IF( OR(Purchase_Team__c = &quot;Partner Sales&quot;,Purchase_Team__c = &quot;Acquisition Sales&quot;, Purchase_Team__c = &quot;Partner Sales-AU/NZ&quot;),Purchase_Team__c,
IF ( (MONTH( PurchaseDate__c ) = MONTH(TODAY()) ) &amp;&amp; YEAR(PurchaseDate__c ) = YEAR(TODAY() ) || (MONTH( PurchaseDate__c ) = MONTH( Last_Month_s_Date__c ))&amp;&amp; YEAR(PurchaseDate__c ) = YEAR(Last_Month_s_Date__c ), Owner:User.Department ,
IF ( ISBLANK( Upgrade_Rep__c ) = FALSE &amp;&amp; NOT(ISPICKVAL( Upgrade_Stage__c ,&quot;New&quot;) &amp;&amp; NOT(ISPICKVAL( Upgrade_Stage__c ,&quot; &quot;))), Upgrade_Rep__r.Department, NULL) )
)</formula>
        <label>Revenue Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUp_Active_MRR__c</fullName>
        <description>Field used in the lead and account triggers to summarize how many subs and which kind are associated</description>
        <formula>IF(RollUp_Active_Store__c = 1 &amp;&amp; RecordTypeId = &quot;012a0000001NTl7&quot;, MonthlyRecurringRevenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RollUp-Active MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RollUp_Active_Store__c</fullName>
        <description>Field used in the lead and account triggers to summarize how many subs and which kind are associated</description>
        <formula>IF(IsTrial__c = FALSE &amp;&amp; (ISPICKVAL(Status__c, &quot;Active&quot;) || ISPICKVAL(Status__c, &quot;Suspended&quot;)) &amp;&amp; RecordTypeId = &quot;012a0000001NTl7&quot;&amp;&amp; ISPICKVAL( ProductType__c,&quot;Store&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RollUp-Active Store</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp_Active_Trial__c</fullName>
        <description>Field used in the lead and account triggers to summarize how many subs and which kind are associated</description>
        <formula>IF (IsTrial__c = TRUE 
&amp;&amp; ISPICKVAL(Status__c, &quot;Active&quot;)  
&amp;&amp; RecordTypeId = &quot;012a0000001NTl7&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RollUp-Active Trial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp_Non_Trial_Sub__c</fullName>
        <description>Field used in the lead and account triggers to summarize how many subs and which kind are associated</description>
        <formula>IF (IsTrial__c = FALSE &amp;&amp;  RecordTypeId = &quot;012a0000001NTl7&quot; &amp;&amp; NOT(ISPICKVAL( ProductType__c,&quot;SSL Certificate&quot;)) &amp;&amp; NOT(ISPICKVAL( ProductType__c,&quot;Domain Name&quot;)) , 1,0)</formula>
        <label>RollUp-Non Trial Sub</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RollUp_Trial_Sub__c</fullName>
        <description>Field used in the lead and account triggers to summarize how many subs and which kind are associated</description>
        <formula>IF (IsTrial__c &amp;&amp; RecordTypeId = &quot;012a0000001NTl7&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RollUp-Trial Sub</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBD_ChannelUnity_Coupon_Code__c</fullName>
        <description>Store the ChannelUnity Coupon code offer  for Orion clients</description>
        <inlineHelpText>Store the ChannelUnity Coupon code offer for Orion clients</inlineHelpText>
        <label>SBD ChannelUnity Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Domain_Name__c</fullName>
        <description>Created for the SBD EIG project to house the original store URL of the EIG ProStores account.  If not re-purposed by Engineering, may be able to be deleted.  Check with Warren Washington</description>
        <label>SBD Domain Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SBD_Store_ID__c</fullName>
        <description>Created for the SBD EIG project to house the unique store ID of the EIG ProStores account. If not re-purposed by Engineering, may be able to be deleted. Check with Warren Washington</description>
        <externalId>true</externalId>
        <inlineHelpText>Represents the Franchise External ID</inlineHelpText>
        <label>SBD Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBD_Value__c</fullName>
        <description>Formula used to add an MRR value to the SBD reseller deals that come in from MBA with $0 MRR.  Engineering is working to push a value for these stores to the Monthly Recurring Revenue field, however, it will show the full store worth and not the BC revenue amount (may be an issue for dashboards)</description>
        <formula>IF(  OR(Strategic_Partner_Type__c  &lt;&gt;&quot;Reseller&quot;,Referral_ID__c = &quot;heartland_referral&quot;),MonthlyRecurringRevenue__c,
/*
IF( ProductID__c=&quot;49&quot;, 24.95,
IF( ProductID__c=&quot;50&quot;, 39.95,
IF( ProductID__c=&quot;98&quot;, 79.95,
IF( ProductID__c=&quot;52&quot;, 149.95,
IF( ProductID__c=&quot;53&quot;, 299.95,
IF( ProductID__c=&quot;57&quot;, 14.99,
IF( ProductID__c=&quot;58&quot;, 29.99,
IF( ProductID__c=&quot;101&quot;, 29.95,
IF( ProductID__c=&quot;102&quot;, 79.95,
IF( ProductID__c=&quot;103&quot;, 199.95,
NULL)))))))))))
*/
CASE(ProductID__c,
&quot;49&quot;, 24.95,
&quot;50&quot;, 39.95,
&quot;97&quot;, 29.95,
&quot;98&quot;, 79.95,
&quot;99&quot;, 199.95,
&quot;52&quot;, 149.95,
&quot;53&quot;, 299.95,
&quot;57&quot;, 14.99,
&quot;58&quot;, 29.99,
&quot;101&quot;, 29.95,
&quot;102&quot;, 79.95,
&quot;103&quot;, 199.95,
&quot;115&quot;, 79.95,
null)
)</formula>
        <label>SBD Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SF_Account_ID__c</fullName>
        <description>Formula to pull the associated account&apos;s salesforce ID for reports and list views</description>
        <formula>IF(ISBLANK( Account__c ),Account__r.Account_Unique_ID__c,NULL)</formula>
        <inlineHelpText>Salesforce Account ID</inlineHelpText>
        <label>Salesforce Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Campaign__c</fullName>
        <description>think this can be deleted and was used to capture old data during the re-work project</description>
        <label>zSales Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition : Interspire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition : MagentoGo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition : ProStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition : Yahoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel : ProStores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <description>old acq field that can probably be deleted</description>
        <label>zSales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Un-Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing: New Trial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Same_Month_Cancellation__c</fullName>
        <description>Tracks if a store was created and cancelled in the same month so we can remove it from reports</description>
        <formula>IF( (MONTH(  PurchaseDate__c  ) = MONTH(  CancellationDate__c  ) ) &amp;&amp; ( YEAR( PurchaseDate__c ) = YEAR( CancellationDate__c)),&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <label>Same Month Cancellation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Workflow updates if the sub product contains &quot;Sandbox&quot;</description>
        <inlineHelpText>Is this a sandbox store?</inlineHelpText>
        <label>Sandbox?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saved_from_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Client Services to track which clients called in to cancel but were retained by CS</description>
        <inlineHelpText>Used by Client Services to track which clients called in to cancel but were retained by CS</inlineHelpText>
        <label>Saved from Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SearchTerms__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT MBA Search Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT MBA Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>September_Revenue__c</fullName>
        <description>Sept Revenue, only on admin layout</description>
        <label>BA September Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Server__c</fullName>
        <description>BC server the client&apos;s store is on.  Passed from MBA</description>
        <inlineHelpText>Server that the client&apos;s store is on. Populated from MBA.</inlineHelpText>
        <label>MBA Store Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Used in the partner portal apex code to designate when a sub was created via the portal rather than by MBA</description>
        <inlineHelpText>Used in the partner portal apex code to designate when a sub was created via the portal rather than by MBA</inlineHelpText>
        <label>UNDER REVIEW Source</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRM Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date the trial or store was first created. Pushed from MBA</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Create__c</fullName>
        <description>Does the store start date = subscription created date?</description>
        <formula>DATEVALUE(CreatedDate) =  StartDate__c</formula>
        <inlineHelpText>Does the store start date = subscription created date?</inlineHelpText>
        <label>BA Start Date equals Create date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <description>Field is entered via Work Flow and is used to show the Calendar Month name of the Start Date
Used in portal dashboard</description>
        <inlineHelpText>Field is entered via Work Flow and is used to show the Calendar Month name of the Start Date</inlineHelpText>
        <label>Start Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Year_Month__c</fullName>
        <description>Captures the Year &amp; Month for the start date of the subscription. Field is maintained by a trigger.
Used in portal dashboard</description>
        <inlineHelpText>Captures the Year &amp; Month for the start date of the subscription. Field is maintained by a trigger.</inlineHelpText>
        <label>Start Year Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Shows the current status of the store from MBA but does not always indicate if we have received payment yet.</description>
        <inlineHelpText>Status. Populated from MBA.</inlineHelpText>
        <label>MBA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StoreName__c</fullName>
        <description>Field originally designed to be populated by the MBA sync but only used to capture the old lead date prior to the hierarchy project.  Can probably be deleted</description>
        <label>zStore Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreURL__c</fullName>
        <description>URL of the BC trial or store populated by MBA</description>
        <inlineHelpText>URL of the BC trial or store populated by MBA</inlineHelpText>
        <label>MBA Store URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Store_Age__c</fullName>
        <description>Formula showing the amount of days between the purchase date and now</description>
        <formula>TODAY() - PurchaseDate__c</formula>
        <inlineHelpText>How long this store has been paid. Delta between Purchase Date and Today&apos;s date</inlineHelpText>
        <label>Client Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Store_Launched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox populated by workflow from a related consultation record or by a SSquad rep signifying that the client has taken the steps necessary to be considered launched/up &amp; running</description>
        <inlineHelpText>To be completed by Client Services</inlineHelpText>
        <label>zStore Launched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_URL_TEXT__c</fullName>
        <description>Populated via workflow to enable searchable URL</description>
        <label>zStore URL TEXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Partner_Type__c</fullName>
        <description>Formula pulling the Type value from the associated strategic partner account.  Used in dashboard reports and the SBD value field</description>
        <formula>TEXT(Strategic_Partner__r.Type)</formula>
        <inlineHelpText>Formula pulling the Type value from the associated strategic partner account.  Used in dashboard reports and the SBD value field</inlineHelpText>
        <label>SBD Strategic Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field used to associate subs to SBD accounts for reporting. Populated manually or through Salesforce code.</description>
        <inlineHelpText>Lookup field used to associate subs to SBD accounts for reporting. Populated manually or through Salesforce code.</inlineHelpText>
        <label>SBD Strategic Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Client Subscriptions</relationshipLabel>
        <relationshipName>Strategic_Client_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcription_Day_of_week__c</fullName>
        <formula>IF(Subscription_Hour__c = 0, 

CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2,&quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6,&quot;Saturday&quot;,&quot;&quot;), CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subcription - Day of week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Count__c</fullName>
        <description>Formula = 1 on each record to be summarized and used in report formulas</description>
        <formula>1</formula>
        <label>Subscription Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Hour__c</fullName>
        <formula>VALUE(MID(TEXT(CreatedDate - (5/24)),12,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>